chore: update doc